--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">    <title>SEO Cloud Stacking Backlink Service in 2025</title>
     <meta name="description" content="Get 9 high-quality cloud stacking SEO backlinks that will enhance your website's authority and improve search rankings. Learn how this powerful SEO strategy works in 2025.">
     <meta name="keywords" content="Cloud Stacking, SEO Service, Backlink Service, SEO, 2025, Website Authority, Search Rankings, Cloud Platforms">
-    <link rel="icon" href="cap1.png" type="image/x-icon">
+    <link rel="icon" href="cloud-stacking-seo-service-favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://cloud-stacking-seo-service.pages.dev/">
 
     <meta name="robots" content="index, follow">
