--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ padding-bottom: 0px !important;
 <p><span style="font-weight: 400;">These links are interlinked in a structured stack, where each platform links to the next in a loop <strong>(Platform 1 &rarr; 2, 2 &rarr; 3, ..., 9 &rarr; 1)</strong>. This interlinking ensures that all platforms pass link juice to each other and ultimately to the main website.</span></p>
 <p><span style="font-weight: 400;">Since the links are dofollow, they contribute to higher authority and improved rankings, making cloud stacking a highly effective backlink strategy.</span></p>
 
-<center><img src="https://i.postimg.cc/1XNbC7XX/Cloud-Stack-seo-backlinks.webp" alt="Illustration of cloud stacking backlinks showing multiple high-authority cloud platforms like AWS, Cloudflare, GitHub, and Netlify interlinking"style="width:100%; height:auto;"></center>
+<center><img src="cloud-stack-seo backlinks.webp" alt="Illustration of cloud stacking backlinks showing multiple high-authority cloud platforms like AWS, Cloudflare, GitHub, and Netlify interlinking"style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <center><h2><strong>Platforms Used in Cloud Stacking SEO</strong></h2></center>
@@ -382,7 +382,7 @@ padding-bottom: 0px !important;
 <p><span style="font-weight: 400;">✅ </span><strong>Platform 1 &rarr; Platform 2</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 2 &rarr; Platform 3</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 3 &rarr; Platform 4</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 4 &rarr; Platform 5</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 5 &rarr; Platform 6</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 6 &rarr; Platform 7</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 7 &rarr; Platform 8</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 8 &rarr; Platform 9</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 9 &rarr; Platform 1</strong> <em><span style="font-weight: 400;">(Completing the loop)</span></em></p>
 
 
-<center><img src="https://i.postimg.cc/SNxgxvkM/Interlinking-Structure.png" alt="Interlinking structure diagram featuring a document with platforms like Cloudflare and Vercel, showcasing outbound links, backlink URLs, and interconnections between different platforms for Coach Hire Oxford."style="width:100%; height:auto;"></center>
+<center><img src="interlinking-structure.webp" alt="Interlinking structure diagram featuring a document with platforms like Cloudflare and Vercel, showcasing outbound links, backlink URLs, and interconnections between different platforms for Coach Hire Oxford."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <h3><strong>Step 2: Content Creation</strong></h3>
@@ -393,13 +393,13 @@ padding-bottom: 0px !important;
 <li style="font-weight: 400;"><span style="font-weight: 400;">Engaging and valuable content for better indexing</span></li>
 </ul>
 
-<center><img src="https://i.postimg.cc/zBkkJnQ7/Content-Creation-throught-Chat-GPT.png" alt="Content creation interface in ChatGPT showcasing title suggestions, meta description, and LSI keywords for an airport transfer service, emphasizing stress-free travel with Oxford Minibus Hire."style="width:100%; height:auto;"></center>
+<center><img src="content-creation-article.webp" alt="Content creation interface in ChatGPT showcasing title suggestions, meta description, and LSI keywords for an airport transfer service, emphasizing stress-free travel with Oxford Minibus Hire."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <h3><strong>Step 3: Converting Content into HTML</strong></h3>
 <p><span style="font-weight: 400;">Once the content is ready, it is converted into clean, mobile-friendly HTML. I use a well-designed, responsive HTML template to maintain consistency across all platforms.</span></p>
 
-<center><img src="https://i.postimg.cc/X79YXQLn/text-to-html-conversion-for-cloud-stack-links.webpp" alt="HTML and CSS code on the left side and a static site preview of a Chowking menu blog page on the right, highlighting the process of converting code into a visually appealing website."style="width:100%; height:auto;"></center>
+<center><img src="text-to-html-conversion-for-cloud-stack-links.webp" alt="HTML and CSS code on the left side and a static site preview of a Chowking menu blog page on the right, highlighting the process of converting code into a visually appealing website."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <h3><strong>Step 4: Hosting on Cloud Platforms</strong></h3>
@@ -413,7 +413,7 @@ padding-bottom: 0px !important;
 </ul>
 <p><span style="font-weight: 400;">This ensures that the backlinks get crawled and indexed quickly, improving SEO impact.</span></p>
 
-<center><img src="https://i.postimg.cc/vHTvsxt7/Submit-to-google-search-console.webp" alt="Google Search Console interface showing performance metrics for 'chowkingmenu.pages.dev,' including total clicks, impressions, and average position."style="width:100%; height:auto;"></center>
+<center><img src="submit-to-google-search-console.webp" alt="Google Search Console interface showing performance metrics for 'chowkingmenu.pages.dev,' including total clicks, impressions, and average position."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <center><h2><strong>Benefits of Cloud Stacking</strong></h2></center>
@@ -473,7 +473,7 @@ padding-bottom: 0px !important;
 <p><strong>Schema Markup: </strong><span style="font-weight: 400;">I&rsquo;ll add all necessary schemas, including Organization, Review, Business, and Article schema.</span></p>
 <p><strong>Search Engine Submission:</strong><span style="font-weight: 400;"> I&rsquo;ll submit the cloud stack links to Google Search Console for quick indexing.</span></p>
 </section>
-<center><img src="https://i.postimg.cc/SsmWtnKM/Cloud-Stacking-SEO-Backlinks-Service.png" alt="Graphic promoting Cloud Stacking SEO Service with a checklist of features including content creation, embedding GMB reviews, embedding Google Maps, schema markups, and submitting to search engines. Includes a circular photo of a person on a bright green background."style="width:100%; height:auto;"></center>
+<center><img src="cloud-stacking-seo-backlinks-service.webp" alt="Graphic promoting Cloud Stacking SEO Service with a checklist of features including content creation, embedding GMB reviews, embedding Google Maps, schema markups, and submitting to search engines. Includes a circular photo of a person on a bright green background."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 
