--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <meta property="og:title" content="SEO Cloud Stacking Backlink Service in 2025">
     <meta property="og:description" content="Discover the power of cloud stacking backlinks and how this advanced SEO technique boosts your rankings and website authority in 2025.">
-    <meta property="og:image" content="https://cloud-stacking-seo-service.pages.dev/image.png">
+    <meta property="og:image" content="https://cloud-stacking-seo-service.pages.dev/cloud-stack-seo%20backlinks.webp">
     <meta property="og:url" content="https://cloud-stacking-seo-service.pages.dev/">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SEO Cloud Stacking Backlink Service in 2025">
     <meta name="twitter:description" content="Boost your website's authority and SEO rankings with cloud stacking backlinks, a powerful strategy for 2025.">
-    <meta name="twitter:image" content="https://cloud-stacking-seo-service.pages.dev/image.png">
+    <meta name="twitter:image" content="https://cloud-stacking-seo-service.pages.dev/cloud-stack-seo%20backlinks.webp">
 
 
 
@@ -41,10 +41,10 @@
         "name": "Shaheer Haider",
         "description": "SEO Cloud Stacking Backlink Expert offering cloud stacking services to boost website authority and search rankings. Specializing in high-quality, interlinked cloud platforms for SEO.",
         "url": "https://cloud-stacking-seo-service.pages.dev/",
-        "image": "https://cloud-stacking-seo-service.pages.dev/image.png",
+        "image": "https://cloud-stacking-seo-service.pages.dev/cloud-stack-seo%20backlinks.webp",
         "sameAs": [
-            "https://www.linkedin.com/in/yourprofile",
-            "https://www.facebook.com/yourprofile"
+            "https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/",
+            "https://web.facebook.com/cloudstackingseoservice/"
         ],
         "jobTitle": "SEO Specialist",
         "worksFor": {
@@ -483,8 +483,8 @@ padding-bottom: 0px !important;
 
 <p><span style="font-weight: 400;">If you&rsquo;re looking for high-quality cloud stacking and SEO services, let&rsquo;s connect</span></p>
 <p><strong>Email:</strong><span style="font-weight: 400;">&nbsp;<a href="mailto:shaheer1472@gmail.com">shaheer1472@gmail.com</a></span></p>
-<p><strong>LinkedIn:</strong><span style="font-weight: 400;">&nbsp;<a href="http://www.linkedin.com/feed/">www.linkedin.com/feed/</a></span></p>
-<p><strong>Facebook:&nbsp;</strong><a href="https://web.facebook.com/CloudStackingBacklink">https://web.facebook.com/CloudStackingBacklink</a></p>
+<p><strong>LinkedIn:</strong><span style="font-weight: 400;">&nbsp;<a href="https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/">https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/</a></span></p>
+<p><strong>Facebook:&nbsp;</strong><a href="https://web.facebook.com/cloudstackingseoservice/">https://web.facebook.com/cloudstackingseoservice/</a></p>
 <p>&nbsp;</p>
 <p><span style="font-weight: 400;">🚀 </span><strong>Let&rsquo;s build a strong online presence together!</strong></p>
 <p>&nbsp;</p>
@@ -511,8 +511,8 @@ padding-bottom: 0px !important;
             </div>
             <div class="col-lg-3">
                 <p><strong>Follow Us</strong></p>
-                <a href="https://web.facebook.com/CloudStackingBacklink" class="facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.linkedin.com/in/shaheerhaider1472/" class="linkedin" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+                <a href="https://web.facebook.com/cloudstackingseoservice/" class="facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/" class="linkedin" rel="nofollow"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </div>
