--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@ padding-bottom: 0px !important;
 <center><h2><strong>Contact Me</strong></h2></center>
 
 <p><span style="font-weight: 400;">If you&rsquo;re looking for high-quality cloud stacking and SEO services, let&rsquo;s connect</span></p>
-<p><strong>Email:</strong><span style="font-weight: 400;">&nbsp;<a href="mailto:shaheer1472@gmail.com">shaheer1472@gmail.com</a></span></p>
-<p><strong>LinkedIn:</strong><span style="font-weight: 400;">&nbsp;<a href="https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/">https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/</a></span></p>
+<p><strong>Email:</strong><a href="mailto:shaheer1472@gmail.com">shaheer1472@gmail.com</a></p>
+<p><strong>LinkedIn:</strong><a href="https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/">https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/</a></p>
 <p><strong>Facebook:&nbsp;</strong><a href="https://web.facebook.com/cloudstackingseoservice/">https://web.facebook.com/cloudstackingseoservice/</a></p>
 <p>&nbsp;</p>
 <p><span style="font-weight: 400;">🚀 </span><strong>Let&rsquo;s build a strong online presence together!</strong></p>
