--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="h51qrmQaznkS7KxzsKxtnHGgkpX6tsW7gH_9wNEef60" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">    
     <title>SEO Cloud Stacking Backlink Service in 2025</title>
