--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="google-site-verification" content="h51qrmQaznkS7KxzsKxtnHGgkpX6tsW7gH_9wNEef60" />
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">    
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>SEO Cloud Stacking Backlink Service in 2025</title>
     <meta name="description" content="SEO Cloud Stacking Backlink Expert offering cloud stacking services to boost website authority and search rankings. Specializing in high-quality, interlinked cloud platforms for SEO.">
     <meta name="keywords" content="Cloud Stacking, SEO Service, Backlink Service, SEO, 2025, Website Authority, Search Rankings, Cloud Platforms">
