--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="h51qrmQaznkS7KxzsKxtnHGgkpX6tsW7gH_9wNEef60" />
+<meta name="google-site-verification" content="h51qrmQaznkS7KxzsKxtnHGgkpX6tsW7gH_9wNEef60" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>SEO Cloud Stacking Backlink Service in 2025</title>
@@ -55,17 +55,26 @@
     }
     </script>
 <style>
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 20px;
+    overflow: hidden;
+}
 
-    h1 {
-    margin: 0;
-    padding: 10px;
-    font-weight: bold;
-    text-align: center; /* Centers the text */
+section {
+    background: #FFFFFF;
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-    font-size: 48px; /* Increase size for more prominence */
-    color: #88BD3D; /* Bright orange color */
+    font-size: 48px;
+    color: #88BD3D;
+    text-align: center;
+    font-weight: bold;
 }
 
 h2 {
@@ -94,43 +103,37 @@ p, li {
         color: #333;
         line-height: 1.6;
     }
-    .navbar {
-        background-color: #ffffff;
-        padding: 1rem;
-    }
-    .navbar a {
-        color: #000;
-        font-weight: 600;
-    }
-    .navbar a:hover {
-        color: #BBE557;
-    }
-    .hero {
-        position: relative;
-        background: url('cloud-stacking-backlinks.webp') center/cover no-repeat;
-        height: 500px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #fff;
-        text-align: center;
-    }
-    .hero h1 {
-        font-size: 3rem;
-        font-weight: 700;
-    }
-    .hero p {
-        font-size: 1.25rem;
-        margin-top: 1rem;
-    }
-    .section {
-        padding: 2rem 1rem;
-    }
-    .section h2 {
-        font-size: 2rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-    }
+.navbar {
+    background-color: #ffffff;
+    padding: 1rem;
+}
+
+.navbar a:hover {
+    color: #BBE557;
+}
+
+.hero {
+    position: relative;
+    background: url('https://i.postimg.cc/sD1pRVvn/Cloud-Stacking-Backlinks-6.png') center/cover no-repeat;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+
+.hero h1 {
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 768px) {
+    h1 { font-size: 36px; }
+    h2 { font-size: 28px; }
+    .hero { height: auto; padding: 50px 20px; }
+}
     .faq .card {
         margin-bottom: 1rem;
     }
@@ -148,7 +151,7 @@ background:#bcd9df!important;
 background: #fefcf8;
 }
 .dropdown-menu{
-top:%;
+top:auto;
 max-width: 800px;
 overflow-x: auto;
 }
@@ -315,16 +318,13 @@ padding-bottom: 0px !important;
 </li>
 <li class="nav-item"><a class="y8cd3f5746abf1c70106a855b2cd42ca7 nav-link" href="#My-Projects">My Projects</a>
 </li><li class="nav-item">
-<a class="btn-md btn vf6d40ef501829cfdffc4c5d03f5045e5" href="#Contact-Me">Contat Me</a>
+<a class="btn-md btn vf6d40ef501829cfdffc4c5d03f5045e5" href="#Contact-Me">Contact Me</a>
 </li>
 </ul>
 </div>
 </nav>
 
 
-<!-- Hero Section -->
-<div class="hero">
-</div>
 
     <div class="container">
       <p>&nbsp;</p>
