--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ p, li {
 
 .hero {
     position: relative;
-    background: url('https://i.postimg.cc/sD1pRVvn/Cloud-Stacking-Backlinks-6.png') center/cover no-repeat;
+    background: url('cloud-stacking-backlinks.webp') center/cover no-repeat;
     height: 500px;
     display: flex;
     align-items: center;
