--- a/index.html
+++ b/index.html
@@ -324,7 +324,9 @@ padding-bottom: 0px !important;
 </div>
 </nav>
 
-
+<!-- Hero Section -->
+<div class="hero">
+</div>
 
     <div class="container">
       <p>&nbsp;</p>
