--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta name="google-site-verification" content="h51qrmQaznkS7KxzsKxtnHGgkpX6tsW7gH_9wNEef60" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>SEO Cloud Stacking Backlink Service in 2025</title>
+    <title>Best Cloud Stacking SEO Backlink Service to Buy Online</title>
     <meta name="description" content="SEO Cloud Stacking Backlink Expert offering cloud stacking services to boost website authority and search rankings. Specializing in high-quality, interlinked cloud platforms for SEO.">
     <meta name="keywords" content="Cloud Stacking, SEO Service, Backlink Service, SEO, 2025, Website Authority, Search Rankings, Cloud Platforms">
-    <link rel="icon" href="cloud-stacking-seo-service-favicon.png" type="image/x-icon">
+    <link rel="icon" href="https://cloud-stacking-seo-service.pages.dev/cloud-stacking-seo-service-favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://cloud-stacking-seo-service.pages.dev/">
 
     <meta name="robots" content="index, follow">
@@ -30,7 +30,7 @@
 <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Kumbh+Sans:100,200,300,400,500,600,700,800,900&amp;display=swap">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="cloud-stacking-seo-service-favicon.png" alt="Cloud Stacking SEO Service favicon" />
+<link rel="shortcut icon" href="https://cloud-stacking-seo-service.pages.dev/cloud-stacking-seo-service-favicon.png" alt="Cloud Stacking SEO Service favicon" />
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
@@ -42,7 +42,7 @@
         "name": "Shaheer Haider",
         "description": "SEO Cloud Stacking Backlink Expert offering cloud stacking services to boost website authority and search rankings. Specializing in high-quality, interlinked cloud platforms for SEO.",
         "url": "https://cloud-stacking-seo-service.pages.dev/",
-        "image": "https://cloud-stacking-seo-service.pages.dev/cloud-stack-seo%20backlinks.webp",
+        "image": "https://cloud-stacking-seo-service.pages.dev/Cloud%20Stacking%20SEO%20Backlinks%20logo.webp",
         "sameAs": [
             "https://www.linkedin.com/in/shaheerhaider-cloudstackingseoservice/",
             "https://web.facebook.com/cloudstackingseoservice/"
@@ -114,7 +114,7 @@ p, li {
 
 .hero {
     position: relative;
-    background: url('cloud-stacking-backlinks.webp') center/cover no-repeat;
+    background: url('https://cloud-stacking-seo-service.pages.dev/cloud-stacking-backlinks.webp') center/cover no-repeat;
     height: 500px;
     display: flex;
     align-items: center;
@@ -130,9 +130,40 @@ p, li {
 }
 
 @media screen and (max-width: 768px) {
-    h1 { font-size: 36px; }
+    /* Headings */
+    h1 { font-size: 32px; }
     h2 { font-size: 28px; }
-    .hero { height: auto; padding: 50px 20px; }
+    h3 { font-size: 24px; }
+    h4 { font-size: 20px; }
+    p { font-size: 16px; line-height: 1.6; }
+
+    /* Images */
+    img { max-width: 100%; height: auto; display: block; }
+
+    /* Lists */
+    ul, ol { padding-left: 20px; }
+    li { font-size: 16px; margin-bottom: 5px; }
+
+    /* Links */
+    a { font-size: 16px; word-wrap: break-word; }
+
+    /* Buttons */
+    button, .btn {
+        font-size: 16px;
+        padding: 10px 15px;
+        width: 100%;
+    }
+
+    /* Containers and Layout */
+    .container { padding: 0 15px; }
+    .hero { height: auto; padding: 50px 20px; text-align: center; }
+
+    /* Navigation */
+    .nav { flex-direction: column; align-items: center; }
+    .nav a { padding: 10px; display: block; }
+
+    /* Forms */
+    input, textarea { width: 100%; font-size: 16px; padding: 10px; }
 }
     .faq .card {
         margin-bottom: 1rem;
@@ -340,7 +371,7 @@ padding-bottom: 0px !important;
 <p><span style="font-weight: 400;">These links are interlinked in a structured stack, where each platform links to the next in a loop <strong>(Platform 1 &rarr; 2, 2 &rarr; 3, ..., 9 &rarr; 1)</strong>. This interlinking ensures that all platforms pass link juice to each other and ultimately to the main website.</span></p>
 <p><span style="font-weight: 400;">Since the links are dofollow, they contribute to higher authority and improved rankings, making cloud stacking a highly effective backlink strategy.</span></p>
 
-<center><img src="cloud-stack-seo backlinks.webp" alt="Illustration of cloud stacking backlinks showing multiple high-authority cloud platforms like AWS, Cloudflare, GitHub, and Netlify interlinking"style="width:100%; height:auto;"></center>
+<center><img src="https://cloud-stacking-seo-service.pages.dev/cloud-stack-seo%20backlinks.webp" alt="Illustration of cloud stacking backlinks showing multiple high-authority cloud platforms like AWS, Cloudflare, GitHub, and Netlify interlinking"style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <center><h2><strong>Platforms Used in Cloud Stacking SEO</strong></h2></center>
@@ -385,7 +416,7 @@ padding-bottom: 0px !important;
 <p><span style="font-weight: 400;">✅ </span><strong>Platform 1 &rarr; Platform 2</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 2 &rarr; Platform 3</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 3 &rarr; Platform 4</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 4 &rarr; Platform 5</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 5 &rarr; Platform 6</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 6 &rarr; Platform 7</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 7 &rarr; Platform 8</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 8 &rarr; Platform 9</strong><strong><br /></strong><span style="font-weight: 400;">✅ </span><strong>Platform 9 &rarr; Platform 1</strong> <em><span style="font-weight: 400;">(Completing the loop)</span></em></p>
 
 
-<center><img src="interlinking-structure.webp" alt="Interlinking structure diagram featuring a document with platforms like Cloudflare and Vercel, showcasing outbound links, backlink URLs, and interconnections between different platforms for Coach Hire Oxford."style="width:100%; height:auto;"></center>
+<center><img src="https://cloud-stacking-seo-service.pages.dev/interlinking-structure.webp" alt="Interlinking structure diagram featuring a document with platforms like Cloudflare and Vercel, showcasing outbound links, backlink URLs, and interconnections between different platforms for Coach Hire Oxford."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <h3><strong>Step 2: Content Creation</strong></h3>
@@ -396,13 +427,13 @@ padding-bottom: 0px !important;
 <li style="font-weight: 400;"><span style="font-weight: 400;">Engaging and valuable content for better indexing</span></li>
 </ul>
 
-<center><img src="content-creation-article.webp" alt="Content creation interface in ChatGPT showcasing title suggestions, meta description, and LSI keywords for an airport transfer service, emphasizing stress-free travel with Oxford Minibus Hire."style="width:100%; height:auto;"></center>
+<center><img src="https://cloud-stacking-seo-service.pages.dev/content-creation-article.webp" alt="Content creation interface in ChatGPT showcasing title suggestions, meta description, and LSI keywords for an airport transfer service, emphasizing stress-free travel with Oxford Minibus Hire."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <h3><strong>Step 3: Converting Content into HTML</strong></h3>
 <p><span style="font-weight: 400;">Once the content is ready, it is converted into clean, mobile-friendly HTML. I use a well-designed, responsive HTML template to maintain consistency across all platforms.</span></p>
 
-<center><img src="text-to-html-conversion-for-cloud-stack-links.webp" alt="HTML and CSS code on the left side and a static site preview of a Chowking menu blog page on the right, highlighting the process of converting code into a visually appealing website."style="width:100%; height:auto;"></center>
+<center><img src="https://cloud-stacking-seo-service.pages.dev/text-to-html-conversion-for-cloud-stack-links.webp" alt="HTML and CSS code on the left side and a static site preview of a Chowking menu blog page on the right, highlighting the process of converting code into a visually appealing website."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <h3><strong>Step 4: Hosting on Cloud Platforms</strong></h3>
@@ -416,7 +447,7 @@ padding-bottom: 0px !important;
 </ul>
 <p><span style="font-weight: 400;">This ensures that the backlinks get crawled and indexed quickly, improving SEO impact.</span></p>
 
-<center><img src="submit-to-google-search-console.webp" alt="Google Search Console interface showing performance metrics for 'chowkingmenu.pages.dev,' including total clicks, impressions, and average position."style="width:100%; height:auto;"></center>
+<center><img src="https://cloud-stacking-seo-service.pages.dev/submit-to-google-search-console.webp" alt="Google Search Console interface showing performance metrics for 'chowkingmenu.pages.dev,' including total clicks, impressions, and average position."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 <center><h2><strong>Benefits of Cloud Stacking</strong></h2></center>
@@ -476,7 +507,7 @@ padding-bottom: 0px !important;
 <p><strong>Schema Markup: </strong><span style="font-weight: 400;">I&rsquo;ll add all necessary schemas, including Organization, Review, Business, and Article schema.</span></p>
 <p><strong>Search Engine Submission:</strong><span style="font-weight: 400;"> I&rsquo;ll submit the cloud stack links to Google Search Console for quick indexing.</span></p>
 </section>
-<center><img src="cloud-stacking-seo-backlinks-service.webp" alt="Graphic promoting Cloud Stacking SEO Service with a checklist of features including content creation, embedding GMB reviews, embedding Google Maps, schema markups, and submitting to search engines. Includes a circular photo of a person on a bright green background."style="width:100%; height:auto;"></center>
+<center><img src="https://cloud-stacking-seo-service.pages.dev/cloud-stacking-seo-backlinks-service.webp" alt="Graphic promoting Cloud Stacking SEO Service with a checklist of features including content creation, embedding GMB reviews, embedding Google Maps, schema markups, and submitting to search engines. Includes a circular photo of a person on a bright green background."style="width:100%; height:auto;"></center>
 
 <p>&nbsp;</p>
 
