--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="icon" href="https://cloud-stacking-seo-service.pages.dev/cloud-stacking-seo-service-favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://cloud-stacking-seo-service.pages.dev/">
 
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="robots" content="index, nofollow">
+    <meta name="googlebot" content="index, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="index, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
     <meta property="og:title" content="SEO Cloud Stacking Backlink Service in 2025">
     <meta property="og:description" content="Discover the power of cloud stacking backlinks and how this advanced SEO technique boosts your rankings and website authority in 2025.">
