--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ padding-bottom: 0px !important;
 
 <!-- Navbar -->
 <nav class="navbar-expand-lg navbar">
-<a class="navbar-brand" href="https://cloud-stacking-seo-service.pages.dev/"  ><img alt="https://cloud-stacking-seo-service.pages.dev/cloud-stacking-seo-backlink-service-logo.webp" src="Cloud Stacking SEO Backlinks logo.webp"  width="250px" ></a>
+<a class="navbar-brand" href="https://cloud-stacking-seo-service.pages.dev/"  ><img alt="cloud stacking backlinks seo logo" src="https://cloud-stacking-seo-service.pages.dev/cloud-stacking-seo-backlink-service-logo.webp"  width="250px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon  fa fa-bars"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
 <ul class="navbar-nav d-flex align-items-center ml-auto"><li class="nav-item">
